test/libyul/yulSyntaxTests/objects/data_bin_name.yul
object "A" {
  code {}
  data bin"00010001" ""
}
// ----
// ParserError 2314: (30-43): Expected 'StringLiteral' but got 'BinStringLiteral'
